2011-06-02  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/document.c, src/document.h, src/ui_utils.c, src/ui_utils.h:
   Add ui_focus_current_document() and document_grab_focus().
 * src/project.c:
   Focus the editor widget after loading project session files.


2011-05-30  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/filetypes.java:
   Move keyword 'enum' to primary keywords (closes #3305737).


2011-05-29  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * tagmanager/python.c:
   When checking for literal strings to ignore, consider also
   unicode, binary and raw strings.
 * src/plugins.c:
   Define and use get_plugin_path() always and move platform dependent
   code into the function definition.
   Do not add active plugins to the list of plugins when they are
   already in the list (closes #3308191).
   Check whether the custom plugin path is one of the user or system
   plugin paths and if so, ignore it.


2011-05-27  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/prefs.c:
   Fix preferences help button when activated with the keyboard.


2011-05-22  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/about.c, src/build.c, tagmanager/tm_workspace.c:
   Remove unused variables (patch by Eugene Arshinov, thanks).
 * src/stash.c:
   Remove unused variables (suggested by Eugene Arshinov).
 * src/ui_utils.c, doc/geany.txt, doc/geany.html:
   Do not allow 'Save All' even if 'allow_always_save' is set
   (patch by Dimitar Zhekov, thanks).
 * data/filetypes.java:
   Add 'enum' to secondary keywords
   (closes #3305737, patch by Matthew Brush, thanks).


2011-05-12  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/encodings.c:
   Update the HTML content-type encoding detection regexp to accept some
   more valid inputs (closes #3300703).


2011-05-11  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/plugins.c:
   Improve the plugin manager dialog a little.